@@ -18,16 +18,23 @@ import java.util.Date;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 import org.eclipse.jface.action.Action;
 import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
+import org.eclipse.jface.action.Separator;
 import org.eclipse.jface.action.ToolBarManager;
+import org.eclipse.jface.resource.FontDescriptor;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
+import org.eclipse.swt.events.PaintEvent;
 import org.eclipse.swt.events.PaintListener;
 import org.eclipse.swt.graphics.Color;
+import org.eclipse.swt.graphics.Font;
+import org.eclipse.swt.graphics.FontMetrics;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.widgets.Composite;
@@ -35,6 +42,7 @@ import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Label;
 import org.swtchart.IAxis;
+import org.swtchart.IAxis.Position;
 import org.swtchart.ILegend;
 import org.swtchart.ILineSeries;
 import org.swtchart.ILineSeries.PlotSymbolType;
@@ -71,6 +79,7 @@ import name.abuchen.portfolio.ui.util.DropDown;
 import name.abuchen.portfolio.ui.util.SimpleAction;
 import name.abuchen.portfolio.ui.util.chart.TimelineChart;
 import name.abuchen.portfolio.ui.util.chart.TimelineChartToolTip;
+import name.abuchen.portfolio.ui.views.securitychart.SharesHeldChartSeries;
 import name.abuchen.portfolio.util.FormatHelper;
 import name.abuchen.portfolio.util.Interval;
 import name.abuchen.portfolio.util.TradeCalendar;
@@ -121,6 +130,34 @@ public class SecuritiesChart
         }
     }
 
+    private static class ChartIntervalOrMessage
+    {
+        private final String message;
+        private final ChartInterval interval;
+
+        private ChartIntervalOrMessage(ChartInterval interval)
+        {
+            this.interval = interval;
+            this.message = null;
+        }
+
+        private ChartIntervalOrMessage(String message)
+        {
+            this.interval = null;
+            this.message = message;
+        }
+
+        public String getMessage()
+        {
+            return message;
+        }
+
+        public ChartInterval getInterval()
+        {
+            return interval;
+        }
+    }
+
     public enum IntervalOption
     {
         M1(Messages.SecurityTabChart1M, Messages.SecurityTabChart1MToolTip), //
@@ -154,49 +191,52 @@ public class SecuritiesChart
             return tooltip;
         }
 
-        public ChartInterval getInverval(Client client, CurrencyConverter converter, Security security)
+        public ChartIntervalOrMessage getInterval(Client client, CurrencyConverter converter, Security security)
         {
             LocalDate now = LocalDate.now();
 
             switch (this)
             {
                 case M1:
-                    return new ChartInterval(now.minus(Period.ofMonths(1)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofMonths(1)), now));
                 case M2:
-                    return new ChartInterval(now.minus(Period.ofMonths(2)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofMonths(2)), now));
                 case M6:
-                    return new ChartInterval(now.minus(Period.ofMonths(6)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofMonths(6)), now));
                 case Y1:
-                    return new ChartInterval(now.minus(Period.ofYears(1)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(1)), now));
                 case Y2:
-                    return new ChartInterval(now.minus(Period.ofYears(2)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(2)), now));
                 case Y3:
-                    return new ChartInterval(now.minus(Period.ofYears(3)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(3)), now));
                 case Y5:
-                    return new ChartInterval(now.minus(Period.ofYears(5)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(5)), now));
                 case Y10:
-                    return new ChartInterval(now.minus(Period.ofYears(10)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(10)), now));
                 case YTD:
-                    return new ChartInterval(now.minus(Period.ofDays(now.getDayOfYear() - 1)), now);
+                    return new ChartIntervalOrMessage(
+                                    new ChartInterval(now.minus(Period.ofDays(now.getDayOfYear() - 1)), now));
                 case H:
                     List<TransactionPair<?>> tx = security.getTransactions(client);
                     if (tx.isEmpty())
-                        return new ChartInterval(now, now);
+                        return new ChartIntervalOrMessage(Messages.SecuritiesChart_NoDataMessage_NoHoldings);
 
                     Collections.sort(tx, TransactionPair.BY_DATE);
                     boolean hasHoldings = ClientSnapshot.create(client, converter, LocalDate.now())
                                     .getPositionsByVehicle().containsKey(security);
 
-                    return new ChartInterval(tx.get(0).getTransaction().getDateTime().toLocalDate(), hasHoldings
-                                    ? LocalDate.now()
-                                    : tx.get(tx.size() - 1).getTransaction().getDateTime().toLocalDate());
+                    return new ChartIntervalOrMessage(
+                                    new ChartInterval(tx.get(0).getTransaction().getDateTime().toLocalDate(),
+                                                    hasHoldings ? LocalDate.now()
+                                                                    : tx.get(tx.size() - 1).getTransaction()
+                                                                                    .getDateTime().toLocalDate()));
                 case ALL:
                     List<SecurityPrice> prices = security.getPricesIncludingLatest();
-
                     if (prices.isEmpty())
-                        return new ChartInterval(now, now);
+                        return new ChartIntervalOrMessage(Messages.SecuritiesChart_NoDataMessage_NoPrices);
                     else
-                        return new ChartInterval(prices.get(0).getDate(), prices.get(prices.size() - 1).getDate());
+                        return new ChartIntervalOrMessage(new ChartInterval(prices.get(0).getDate(),
+                                        prices.get(prices.size() - 1).getDate()));
 
                 default:
                     throw new IllegalArgumentException();
@@ -211,12 +251,14 @@ public class SecuritiesChart
         CLOSING(Messages.LabelChartDetailChartDevelopmentClosing), //
         PURCHASEPRICE(Messages.LabelChartDetailChartDevelopmentClosingFIFO), //
         INVESTMENT(Messages.LabelChartDetailMarkerInvestments), //
+        SHARES_HELD(Messages.ColumnSharesOwned),
         DIVIDENDS(Messages.LabelChartDetailMarkerDividends), //
         EVENTS(Messages.LabelChartDetailMarkerEvents), //
         EXTREMES(Messages.LabelChartDetailMarkerHighLow), //
         FIFOPURCHASE(Messages.LabelChartDetailMarkerPurchaseFIFO), //
         FLOATINGAVGPURCHASE(Messages.LabelChartDetailMarkerPurchaseMovingAverage), //
         BOLLINGERBANDS(Messages.LabelChartDetailIndicatorBollingerBands), //
+        MACD(Messages.LabelChartDetailIndicatorMacd), //
         SMA_5DAYS(Messages.LabelChartDetailMovingAverage_5days), //
         SMA_20DAYS(Messages.LabelChartDetailMovingAverage_20days), //
         SMA_30DAYS(Messages.LabelChartDetailMovingAverage_30days), //
@@ -237,7 +279,10 @@ public class SecuritiesChart
         SHOW_DATA_LABELS(Messages.LabelChartDetailSettingsShowDataLabel), //
         SHOW_MISSING_TRADING_DAYS(Messages.LabelChartDetailSettingsShowMissingTradingDays), //
         USE_BASE_CURRENCY(Messages.LabelChartDetailSettingsUseBaseCurrency), //
-        SHOW_LIMITS(Messages.LabelChartDetailSettingsShowLimits);
+        SHOW_LIMITS(Messages.LabelChartDetailSettingsShowLimits), //
+        SHOW_PERCENTAGE_AXIS(Messages.LabelChartDetailSettingsShowPercentageAxis), //
+        SHOW_MAIN_HORIZONTAL_LINES(Messages.LabelChartDetailSettingsShowHorizontalLinesMain), //
+        SHOW_PERCENTAGE_HORIZONTAL_LINES(Messages.LabelChartDetailSettingsShowHorizontalLinesPercentage);
 
         private final String label;
 
@@ -276,6 +321,9 @@ public class SecuritiesChart
          */
         public static ChartRange createFor(List<SecurityPrice> prices, ChartInterval chartInterval)
         {
+            if (chartInterval == null)
+                return null;
+
             int start = Collections.binarySearch(prices, new SecurityPrice(chartInterval.getStart(), 0),
                             new SecurityPrice.ByDate());
 
@@ -301,18 +349,26 @@ public class SecuritiesChart
         }
     }
 
-    private Color colorQuote;
+    private Color colorQuote = Colors.getColor(77, 52, 235); // #4D34EB
+    private Color colorQuoteAreaPositive = Colors.getColor(90, 114, 226); // #5A72E2
+    private Color colorQuoteAreaNegative = Colors.getColor(226, 91, 90); // #E25B5A
 
-    private static final Color colorEventPurchase = Colors.getColor(26, 173, 33);
-    private static final Color colorEventSale = Colors.getColor(232, 51, 69);
-    private static final Color colorEventDividend = Colors.getColor(128, 0, 128);
+    private Color colorEventPurchase = Colors.getColor(26, 173, 33); // #1AAD21
+    private Color colorEventSale = Colors.getColor(255, 43, 48); // #FF2B30
+    private Color colorEventDividend = Colors.getColor(128, 99, 168); // #8063A8
 
-    private static final Color colorHigh = Colors.getColor(0, 102, 0);
-    private static final Color colorLow = Colors.getColor(128, 0, 0);
+    private Color colorExtremeMarkerHigh = Colors.getColor(0, 147, 15); // #00930F
+    private Color colorExtremeMarkerLow = Colors.getColor(168, 39, 42); // #A8272A
 
-    private static final Color colorFifoPurchasePrice = Colors.getColor(226, 122, 121);
-    private static final Color colorMovingAveragePurchasePrice = Colors.getColor(150, 82, 81);
-    private static final Color colorBollingerBands = Colors.getColor(201, 141, 68);
+    private Color colorNonTradingDay = Colors.getColor(255, 137, 89); // #FF8959
+
+    private Color colorSharesHeld = Colors.getColor(235, 201, 52); // #EBC934
+    
+    private static final Color colorFifoPurchasePrice = Colors.getColor(226, 122, 121); // #E27A79
+    private static final Color colorMovingAveragePurchasePrice = Colors.getColor(150, 82, 81); // #965251
+    private static final Color colorBollingerBands = Colors.getColor(201, 141, 68); // #C98D44
+    private static final Color colorMACD = Colors.getColor(226, 155, 200); // #E29BC8
+
     private static final Color colorSMA1 = Colors.getColor(179, 107, 107); // #B36B6B
     private static final Color colorSMA2 = Colors.getColor(179, 167, 107); // #B3A76B
     private static final Color colorSMA3 = Colors.getColor(131, 179, 107); // #83B36B
@@ -328,11 +384,6 @@ public class SecuritiesChart
     private static final Color colorEMA5 = Colors.getColor(107, 155, 200); // #6B9BC8
     private static final Color colorEMA6 = Colors.getColor(119, 107, 200); // #776BC8
     private static final Color colorEMA7 = Colors.getColor(200, 107, 200); // #C86BB3
-
-    private static final Color colorAreaPositive = Colors.getColor(90, 114, 226);
-    private static final Color colorAreaNegative = Colors.getColor(226, 91, 90);
-
-    private static final Color colorNonTradingDay = Colors.getColor(255, 137, 89);
 
     private static final String PREF_KEY = "security-chart-details"; //$NON-NLS-1$
 
@@ -353,13 +404,14 @@ public class SecuritiesChart
     private IntervalOption intervalOption = IntervalOption.Y2;
 
     private EnumSet<ChartDetails> chartConfig = EnumSet.of(ChartDetails.INVESTMENT, ChartDetails.EVENTS,
-                    ChartDetails.SCALING_LINEAR);
+                    ChartDetails.SCALING_LINEAR, ChartDetails.SHOW_MAIN_HORIZONTAL_LINES);
 
     private List<PaintListener> customPaintListeners = new ArrayList<>();
-    private List<PaintListener> customBehindPaintListener = new ArrayList<>();
     private List<Transaction> customTooltipEvents = new ArrayList<>();
 
     private int swtAntialias = SWT.ON;
+
+    private MessagePainter messagePainter = new MessagePainter();
 
     public SecuritiesChart(Composite parent, Client client, CurrencyConverter converter)
     {
@@ -375,14 +427,17 @@ public class SecuritiesChart
         chart.getTitle().setText("..."); //$NON-NLS-1$
         chart.getTitle().setVisible(false);
 
-        chart.getPlotArea().addPaintListener(event -> customPaintListeners.forEach(l -> l.paintControl(event)));
-        chart.getPlotArea().addPaintListener(event -> customBehindPaintListener.forEach(l -> l.paintControl(event)));
+        chart.addPlotPaintListener(event -> customPaintListeners.forEach(l -> l.paintControl(event)));
+        chart.addPlotPaintListener(this.messagePainter);
+        chart.getPlotArea().addDisposeListener(this.messagePainter);
 
-        setupTooltip();
+        messagePainter.setMessage(Messages.SecuritiesChart_NoDataMessage_NoSecuritySelected);
 
         ILegend legend = chart.getLegend();
         legend.setPosition(SWT.BOTTOM);
         legend.setVisible(true);
+
+        setupTooltip();
     }
 
     public IntervalOption getIntervalOption()
@@ -398,6 +453,71 @@ public class SecuritiesChart
     public void setQuoteColor(Color color)
     {
         this.colorQuote = color;
+    }
+
+    public void setQuoteAreaNegative(Color color)
+    {
+        this.colorQuoteAreaNegative = color;
+    }
+
+    public void setQuoteAreaPositive(Color color)
+    {
+        this.colorQuoteAreaPositive = color;
+    }
+
+    public void setPurchaseColor(Color color)
+    {
+        this.colorEventPurchase = color;
+    }
+
+    public void setSaleColor(Color color)
+    {
+        this.colorEventSale = color;
+    }
+
+    public void setDividendColor(Color color)
+    {
+        this.colorEventDividend = color;
+    }
+
+    public void setExtremeMarkerHighColor(Color color)
+    {
+        this.colorExtremeMarkerHigh = color;
+    }
+
+    public void setExtremeMarkerLowColor(Color color)
+    {
+        this.colorExtremeMarkerLow = color;
+    }
+
+    public void setNonTradingColor(Color color)
+    {
+        this.colorNonTradingDay = color;
+    }
+    
+    public Color getSharesHeldColor()
+    {
+        return colorSharesHeld;
+    }
+    
+    public void setSharesHeldColor(Color color)
+    {
+        this.colorSharesHeld = color;
+    }
+    
+    public Client getClient()
+    {
+        return this.client;
+    }
+    
+    public Security getSecurity()
+    {
+        return this.security;
+    }
+    
+    public int getAntialias()
+    {
+        return this.swtAntialias;
     }
 
     private void setupTooltip()
@@ -440,11 +560,13 @@ public class SecuritiesChart
         toolTip.overrideValueFormat(Messages.LabelChartDetailIndicatorBollingerBandsUpper, calculatedFormat);
         toolTip.overrideValueFormat(Messages.LabelChartDetailMarkerPurchaseFIFO, calculatedFormat);
         toolTip.overrideValueFormat(Messages.LabelChartDetailMarkerPurchaseMovingAverage, calculatedFormat);
+        toolTip.overrideValueFormat(Messages.LabelChartDetailIndicatorMacd, calculatedFormat);
+        toolTip.overrideValueFormat(Messages.LabelChartDetailIndicatorMacdSignal, calculatedFormat);
 
         toolTip.addExtraInfo((composite, focus) -> {
-            if (focus instanceof Date)
+            if (focus instanceof Date focusDate)
             {
-                Instant instant = ((Date) focus).toInstant();
+                Instant instant = focusDate.toInstant();
                 ZonedDateTime zdt = instant.atZone(ZoneId.systemDefault());
                 LocalDate date = zdt.toLocalDate();
 
@@ -453,10 +575,10 @@ public class SecuritiesChart
                 customTooltipEvents.stream() //
                                 .filter(t -> displayInterval.contains(t.getDateTime())) //
                                 .forEach(t -> {
-                                    if (t instanceof AccountTransaction)
-                                        addDividendTooltip(composite, (AccountTransaction) t);
-                                    else if (t instanceof PortfolioTransaction)
-                                        addInvestmentTooltip(composite, (PortfolioTransaction) t);
+                                    if (t instanceof AccountTransaction at)
+                                        addDividendTooltip(composite, at);
+                                    else if (t instanceof PortfolioTransaction pt)
+                                        addInvestmentTooltip(composite, pt);
                                 });
             }
         });
@@ -563,6 +685,9 @@ public class SecuritiesChart
 
     public void addButtons(ToolBarManager toolBar)
     {
+        chart.getChartToolsManager().addButtons(toolBar);
+        toolBar.add(new Separator());
+
         List<Action> viewActions = new ArrayList<>();
 
         for (IntervalOption option : IntervalOption.values())
@@ -578,7 +703,7 @@ public class SecuritiesChart
             viewActions.add(action);
             toolBar.add(action);
         }
-
+        toolBar.add(new Separator());
         toolBar.add(new DropDown(Messages.MenuConfigureChart, Images.CONFIG, SWT.NONE, this::chartConfigAboutToShow));
     }
 
@@ -598,6 +723,7 @@ public class SecuritiesChart
         subMenuChartDevelopment.add(addMenuAction(ChartDetails.CLOSING));
         subMenuChartDevelopment.add(addMenuAction(ChartDetails.PURCHASEPRICE));
         subMenuChartMarker.add(addMenuAction(ChartDetails.INVESTMENT));
+        subMenuChartMarker.add(addMenuAction(ChartDetails.SHARES_HELD));
         subMenuChartMarker.add(addMenuAction(ChartDetails.DIVIDENDS));
         subMenuChartMarker.add(addMenuAction(ChartDetails.EVENTS));
         subMenuChartMarker.add(addMenuAction(ChartDetails.EXTREMES));
@@ -605,6 +731,7 @@ public class SecuritiesChart
         subMenuChartMarker.add(addMenuAction(ChartDetails.FLOATINGAVGPURCHASE));
         subMenuChartMarker.add(addMenuAction(ChartDetails.SHOW_LIMITS));
         subMenuChartIndicator.add(addMenuAction(ChartDetails.BOLLINGERBANDS));
+        subMenuChartIndicator.add(addMenuAction(ChartDetails.MACD));
         subMenuChartMovingAverageSMA.add(addMenuAction(ChartDetails.SMA_5DAYS));
         subMenuChartMovingAverageSMA.add(addMenuAction(ChartDetails.SMA_20DAYS));
         subMenuChartMovingAverageSMA.add(addMenuAction(ChartDetails.SMA_30DAYS));
@@ -624,6 +751,11 @@ public class SecuritiesChart
         subMenuChartSettings.add(addMenuAction(ChartDetails.SHOW_MARKER_LINES));
         subMenuChartSettings.add(addMenuAction(ChartDetails.SHOW_DATA_LABELS));
         subMenuChartSettings.add(addMenuAction(ChartDetails.SHOW_MISSING_TRADING_DAYS));
+        subMenuChartSettings.add(new Separator());
+        subMenuChartSettings.add(addMenuAction(ChartDetails.SHOW_PERCENTAGE_AXIS));
+        subMenuChartSettings.add(addMenuAction(ChartDetails.SHOW_MAIN_HORIZONTAL_LINES));
+        subMenuChartSettings.add(addMenuAction(ChartDetails.SHOW_PERCENTAGE_HORIZONTAL_LINES));
+        subMenuChartSettings.add(new Separator());
         subMenuChartSettings.add(addMenuAction(ChartDetails.USE_BASE_CURRENCY));
         manager.add(subMenuChartScaling);
         manager.add(subMenuChartDevelopment);
@@ -665,6 +797,12 @@ public class SecuritiesChart
                         chartConfig.remove(ChartDetails.CLOSING);
                         chartConfig.remove(ChartDetails.SCALING_LOG);
                         break;
+                    case SHOW_MAIN_HORIZONTAL_LINES:
+                        chartConfig.remove(ChartDetails.SHOW_PERCENTAGE_HORIZONTAL_LINES);
+                        break;
+                    case SHOW_PERCENTAGE_HORIZONTAL_LINES:
+                        chartConfig.remove(ChartDetails.SHOW_MAIN_HORIZONTAL_LINES);
+                        break;
                     default:
                         break;
                 }
@@ -674,7 +812,7 @@ public class SecuritiesChart
                 chartConfig.add(ChartDetails.SCALING_LINEAR);
 
             ReadOnlyClient.unwrap(client).setProperty(PREF_KEY, String.join(",", //$NON-NLS-1$
-                            chartConfig.stream().map(ChartDetails::name).collect(Collectors.toList())));
+                            chartConfig.stream().map(ChartDetails::name).toList()));
 
             updateChart();
 
@@ -699,6 +837,7 @@ public class SecuritiesChart
     private void updateChart()
     {
         chart.setRedraw(false);
+        chart.suspendUpdate(true);
 
         try
         {
@@ -710,40 +849,46 @@ public class SecuritiesChart
             chart.clearMarkerLines();
             chart.clearNonTradingDayMarker();
             customPaintListeners.clear();
-            customBehindPaintListener.clear();
             customTooltipEvents.clear();
+            chart.resetAxes();
+            chart.getTitle().setText(security == null ? "..." : security.getName()); //$NON-NLS-1$
+            messagePainter.setMessage(null);
 
-            if (security == null || security.getPrices().isEmpty())
+            if (security == null)
             {
-                chart.getTitle().setText(security == null ? "..." : security.getName()); //$NON-NLS-1$
-                chart.redraw();
+                messagePainter.setMessage(Messages.SecuritiesChart_NoDataMessage_NoSecuritySelected);
                 return;
             }
 
-            chart.getTitle().setText(security.getName());
-
-            boolean showAreaRelativeToFirstQuote = chartConfig.contains(ChartDetails.CLOSING)
-                            || chartConfig.contains(ChartDetails.PURCHASEPRICE);
-
-            // determine the interval to be shown in the chart
-
-            ChartInterval chartInterval = intervalOption.getInverval(client, converter, security);
-
-            // determine index range for given interval in prices list
-
             List<SecurityPrice> prices = security.getPricesIncludingLatest();
+            if (prices.isEmpty())
+            {
+                messagePainter.setMessage(Messages.SecuritiesChart_NoDataMessage_NoPrices);
+                return;
+            }
+
+            ChartIntervalOrMessage chartIntervalOrMessage = intervalOption.getInterval(client, converter, security);
+            if (chartIntervalOrMessage.getMessage() != null)
+            {
+                messagePainter.setMessage(chartIntervalOrMessage.getMessage());
+                return;
+            }
+
             if (shouldUseBaseCurrency())
                 prices = security.maybeConvertCurrency(converter, prices);
 
+            // determine the interval to be shown in the chart
+            ChartInterval chartInterval = chartIntervalOrMessage.getInterval();
             ChartRange range = ChartRange.createFor(prices, chartInterval);
             if (range == null)
             {
-                chart.redraw();
+                messagePainter.setMessage(
+                                MessageFormat.format(Messages.SecuritiesChart_NoDataMessage_NoPricesInSelectedPeriod,
+                                                intervalOption.getTooltip()));
                 return;
             }
 
             // prepare value arrays
-
             LocalDate[] dates = new LocalDate[range.size];
 
             double[] values = new double[range.size];
@@ -751,12 +896,14 @@ public class SecuritiesChart
             double[] valuesRelativePositive = new double[range.size];
             double[] valuesRelativeNegative = new double[range.size];
             double[] valuesZeroLine = new double[range.size];
-            double firstQuote = 0;
+            Double firstQuote = null;
 
             // Disable SWT antialias for more than 1000 records due to SWT
             // performance issue in Drawing
             swtAntialias = range.size > 1000 ? SWT.OFF : SWT.ON;
 
+            boolean showAreaRelativeToFirstQuote = chartConfig.contains(ChartDetails.CLOSING)
+                            || chartConfig.contains(ChartDetails.PURCHASEPRICE);
             if (!chartConfig.contains(ChartDetails.PURCHASEPRICE))
             {
                 SecurityPrice p2 = prices.get(range.start);
@@ -805,15 +952,15 @@ public class SecuritiesChart
                                 Messages.LabelChartDetailChartDevelopmentClosing + "Negative"); //$NON-NLS-1$
                 lineSeries2ndNegative.setSymbolType(PlotSymbolType.NONE);
                 lineSeries2ndNegative.setYAxisId(1);
-                configureSeriesPainter(lineSeries2ndNegative, javaDates, valuesRelativeNegative, colorAreaNegative, 1,
-                                LineStyle.SOLID, true, false);
+                configureSeriesPainter(lineSeries2ndNegative, javaDates, valuesRelativeNegative, colorQuoteAreaNegative,
+                                1, LineStyle.SOLID, true, false);
 
                 ILineSeries lineSeries2ndPositive = (ILineSeries) chart.getSeriesSet().createSeries(SeriesType.LINE,
                                 Messages.LabelChartDetailChartDevelopmentClosing + "Positive"); //$NON-NLS-1$
                 lineSeries2ndPositive.setSymbolType(PlotSymbolType.NONE);
                 lineSeries2ndPositive.setYAxisId(1);
-                configureSeriesPainter(lineSeries2ndPositive, javaDates, valuesRelativePositive, colorAreaPositive, 1,
-                                LineStyle.SOLID, true, false);
+                configureSeriesPainter(lineSeries2ndPositive, javaDates, valuesRelativePositive, colorQuoteAreaPositive,
+                                1, LineStyle.SOLID, true, false);
             }
 
             ILineSeries lineSeries = (ILineSeries) chart.getSeriesSet().createSeries(SeriesType.LINE,
@@ -830,13 +977,42 @@ public class SecuritiesChart
 
             IAxis yAxis1st = chart.getAxisSet().getYAxis(0);
             IAxis yAxis2nd = chart.getAxisSet().getYAxis(1);
+            IAxis yAxis3rd = chart.getAxisSet().getYAxis(2);
+
+            if (firstQuote == null)
+                firstQuote = (prices.get(range.start).getValue() / Values.Quote.divider());
+
             yAxis2nd.setRange(
                             new Range(yAxis1st.getRange().lower - firstQuote, yAxis1st.getRange().upper - firstQuote));
+
+            if (firstQuote != 0)
+            {
+                yAxis3rd.setRange(new Range(yAxis1st.getRange().lower / firstQuote - 1,
+                                yAxis1st.getRange().upper / firstQuote - 1));
+            }
 
             yAxis1st.enableLogScale(chartConfig.contains(ChartDetails.SCALING_LOG));
             yAxis2nd.enableLogScale(chartConfig.contains(ChartDetails.SCALING_LOG));
 
             yAxis1st.getTick().setVisible(true);
+            // hide percentage axis in logarithmic mode
+            yAxis3rd.getTick().setVisible(chartConfig.contains(ChartDetails.SHOW_PERCENTAGE_AXIS)
+                            && !chartConfig.contains(ChartDetails.SCALING_LOG));
+
+            // ensure that at least one set of horizontal lines is shown
+            if (!chartConfig.contains(ChartDetails.SHOW_MAIN_HORIZONTAL_LINES)
+                            && !chartConfig.contains(ChartDetails.SHOW_PERCENTAGE_HORIZONTAL_LINES))
+                chartConfig.add(ChartDetails.SHOW_MAIN_HORIZONTAL_LINES);
+
+            if (chartConfig.contains(ChartDetails.SHOW_MAIN_HORIZONTAL_LINES) || !yAxis3rd.getTick().isVisible())
+                yAxis1st.getGrid().setStyle(LineStyle.DOT);
+            else
+                yAxis1st.getGrid().setStyle(LineStyle.NONE);
+
+            if (chartConfig.contains(ChartDetails.SHOW_PERCENTAGE_HORIZONTAL_LINES) && yAxis3rd.getTick().isVisible())
+                yAxis3rd.getGrid().setStyle(LineStyle.DOT);
+            else
+                yAxis3rd.getGrid().setStyle(LineStyle.NONE);
 
             boolean shouldShowCurrencyCode = true;
             // boolean shouldShowCurrencyCode = security.getCurrencyCode() != client.getBaseCurrency();
@@ -862,6 +1038,7 @@ public class SecuritiesChart
         }
         finally
         {
+            chart.suspendUpdate(false);
             chart.setRedraw(true);
             chart.redraw();
         }
@@ -871,6 +1048,9 @@ public class SecuritiesChart
     {
         if (chartConfig.contains(ChartDetails.BOLLINGERBANDS))
             addBollingerBandsMarkerLines(chartInterval, 20, 2);
+
+        if (chartConfig.contains(ChartDetails.MACD))
+            addMacdMarkerLines(chartInterval, colorMACD);
 
         if (chartConfig.contains(ChartDetails.SMA_5DAYS))
             addSMAMarkerLines(chartInterval, Messages.LabelChartDetailMovingAverageSMA,
@@ -937,7 +1117,7 @@ public class SecuritiesChart
                             Messages.LabelChartDetailMovingAverage_200days, 200, colorEMA7);
 
         if (chartConfig.contains(ChartDetails.SHOW_LIMITS))
-            addLimitLines(chartInterval, range);
+            addLimitLines(range);
     }
 
     private void addChartMarkerForeground(ChartInterval chartInterval)
@@ -950,6 +1130,9 @@ public class SecuritiesChart
 
         if (chartConfig.contains(ChartDetails.INVESTMENT))
             addInvestmentMarkerLines(chartInterval);
+        
+        if (chartConfig.contains(ChartDetails.SHARES_HELD))
+            new SharesHeldChartSeries().configure(this, chart, chartInterval);
 
         if (chartConfig.contains(ChartDetails.DIVIDENDS))
             addDividendMarkerLines(chartInterval);
@@ -961,7 +1144,7 @@ public class SecuritiesChart
             addExtremesMarkerLines(chartInterval);
     }
 
-    private void addLimitLines(ChartInterval chartInterval, ChartRange range)
+    private void addLimitLines(ChartRange range)
     {
         this.security.getAttributes().getMap().forEach((key, val) -> {
             // null OR not Limit Price --> ignore
@@ -970,9 +1153,11 @@ public class SecuritiesChart
 
             LimitPrice limitAttribute = (LimitPrice) val;
 
-            Optional<AttributeType> attributeName = ReadOnlyClient.unwrap(client) // unwrap because ReadOnlyClient only contains/provides default attributes
-                            .getSettings().getAttributeTypes()
+            // unwrap because ReadOnlyClient only contains/provides default
+            // attributes
+            Optional<AttributeType> attributeName = ReadOnlyClient.unwrap(client).getSettings().getAttributeTypes()
                             .filter(attr -> attr.getId().equals(key)).findFirst();
+
             // could not find name of limit attribute --> don't draw
             if (attributeName.isEmpty())
                 return;
@@ -1026,8 +1211,7 @@ public class SecuritiesChart
         if (smaLines == null || smaLines.getValues() == null || smaLines.getDates() == null)
             return;
 
-        @SuppressWarnings("nls")
-        String lineID = smaSeries + " (" + smaDaysWording + ")";
+        String lineID = smaSeries + " (" + smaDaysWording + ")"; //$NON-NLS-1$ //$NON-NLS-2$
 
         ILineSeries lineSeriesSMA = (ILineSeries) chart.getSeriesSet().createSeries(SeriesType.LINE, lineID);
         lineSeriesSMA.setXDateSeries(smaLines.getDates());
@@ -1048,8 +1232,7 @@ public class SecuritiesChart
         if (emaLines == null || emaLines.getValues() == null || emaLines.getDates() == null)
             return;
 
-        @SuppressWarnings("nls")
-        String lineID = emaSeries + " (" + emaDaysWording + ")";
+        String lineID = emaSeries + " (" + emaDaysWording + ")"; //$NON-NLS-1$ //$NON-NLS-2$
 
         ILineSeries lineSeriesEMA = (ILineSeries) chart.getSeriesSet().createSeries(SeriesType.LINE, lineID);
         lineSeriesEMA.setXDateSeries(emaLines.getDates());
@@ -1070,21 +1253,24 @@ public class SecuritiesChart
                         .filter(t -> t.getType() == PortfolioTransaction.Type.BUY
                                         || t.getType() == PortfolioTransaction.Type.DELIVERY_INBOUND)
                         .filter(t -> chartInterval.contains(t.getDateTime())) //
-                        .sorted(Transaction.BY_DATE).collect(Collectors.toList());
+                        .sorted(Transaction.BY_DATE).toList();
 
-        addInvestmentMarkers(purchase, PortfolioTransaction.Type.BUY.toString(), colorEventPurchase, PlotSymbolType.TRIANGLE);
+        addInvestmentMarkers(purchase, PortfolioTransaction.Type.BUY.toString(), colorEventPurchase,
+                        PlotSymbolType.TRIANGLE);
 
         List<PortfolioTransaction> sales = client.getPortfolios().stream().flatMap(p -> p.getTransactions().stream())
                         .filter(t -> t.getSecurity() == security)
                         .filter(t -> t.getType() == PortfolioTransaction.Type.SELL
                                         || t.getType() == PortfolioTransaction.Type.DELIVERY_OUTBOUND)
                         .filter(t -> chartInterval.contains(t.getDateTime())) //
-                        .sorted(Transaction.BY_DATE).collect(Collectors.toList());
+                        .sorted(Transaction.BY_DATE).toList();
 
-        addInvestmentMarkers(sales, PortfolioTransaction.Type.SELL.toString(), colorEventSale, PlotSymbolType.INVERTED_TRIANGLE);
+        addInvestmentMarkers(sales, PortfolioTransaction.Type.SELL.toString(), colorEventSale,
+                        PlotSymbolType.INVERTED_TRIANGLE);
     }
 
-    private void addInvestmentMarkers(List<PortfolioTransaction> transactions, String seriesLabel, Color color, PlotSymbolType symbol)
+    private void addInvestmentMarkers(List<PortfolioTransaction> transactions, String seriesLabel, Color color,
+                    PlotSymbolType symbol)
     {
         if (transactions.isEmpty())
             return;
@@ -1104,7 +1290,7 @@ public class SecuritiesChart
         {
             Date[] dates = transactions.stream().map(PortfolioTransaction::getDateTime)
                             .map(d -> Date.from(d.atZone(ZoneId.systemDefault()).toInstant()))
-                            .collect(Collectors.toList()).toArray(new Date[0]);
+                            .toArray(size -> new Date[size]);
 
             double[] values = transactions.stream().mapToDouble(
                             t -> t.getGrossPricePerShare(converter.with(getChartCurrency())).getAmount()
@@ -1137,20 +1323,31 @@ public class SecuritiesChart
             if (chartConfig.contains(ChartDetails.SHOW_DATA_LABELS))
             {
                 customPaintListeners.add(event -> {
+                    Color defaultForeground = Colors.theme().defaultForeground();
+                    int symbolSize = border.getSymbolSize();
+
                     IAxis xAxis = chart.getAxisSet().getXAxis(0);
                     IAxis yAxis = chart.getAxisSet().getYAxis(0);
 
                     for (int index = 0; index < dates.length; index++)
                     {
+                        PortfolioTransaction t = transactions.get(index);
+                        if (t == null)
+                            continue;
+
                         int x = xAxis.getPixelCoordinate(dates[index].getTime());
                         int y = yAxis.getPixelCoordinate(values[index]);
 
-                        PortfolioTransaction t = transactions.get(index);
                         String label = Values.Share.format(t.getType().isPurchase() ? t.getShares() : -t.getShares());
                         Point textExtent = event.gc.textExtent(label);
 
-                        event.gc.setForeground(Colors.theme().defaultForeground());
-                        event.gc.drawText(label, x - (textExtent.x / 2), y + border.getSymbolSize(), true);
+                        // If the label does not start in negative, then we
+                        // print it.
+                        if (x - textExtent.x / 2 >= 0)
+                        {
+                            event.gc.setForeground(defaultForeground);
+                            event.gc.drawText(label, x - textExtent.x / 2, y + symbolSize, true);
+                        }
                     }
                 });
             }
@@ -1159,11 +1356,12 @@ public class SecuritiesChart
 
     private void addDividendMarkerLines(ChartInterval chartInterval)
     {
-        List<AccountTransaction> dividends = client.getAccounts().stream().flatMap(a -> a.getTransactions().stream())
-                        .filter(t -> t.getSecurity() == security)
-                        .filter(t -> t.getType() == AccountTransaction.Type.DIVIDENDS)
-                        .filter(t -> chartInterval.contains(t.getDateTime())).sorted(Transaction.BY_DATE)
-                        .collect(Collectors.toList());
+        List<AccountTransaction> dividends = client.getAccounts().stream().flatMap(a -> a.getTransactions().stream()) //
+                        .filter(t -> t.getSecurity() == security) //
+                        .filter(t -> t.getType() == AccountTransaction.Type.DIVIDENDS) //
+                        .filter(t -> chartInterval.contains(t.getDateTime())) //
+                        .sorted(Transaction.BY_DATE) //
+                        .toList(); //
 
         if (dividends.isEmpty())
             return;
@@ -1179,7 +1377,7 @@ public class SecuritiesChart
         {
             Date[] dates = dividends.stream().map(AccountTransaction::getDateTime)
                             .map(d -> Date.from(d.atZone(ZoneId.systemDefault()).toInstant()))
-                            .collect(Collectors.toList()).toArray(new Date[0]);
+                            .toArray(size -> new Date[size]);
 
             IAxis yAxis1st = chart.getAxisSet().getYAxis(0);
             double yAxis1stAxisPrice = Math.max(yAxis1st.getRange().lower * (1 - 2 * 0.08), 0.00001);
@@ -1214,55 +1412,40 @@ public class SecuritiesChart
             if (chartConfig.contains(ChartDetails.SHOW_DATA_LABELS))
             {
                 customPaintListeners.add(event -> {
+                    FontMetrics fontMetrics = event.gc.getFontMetrics();
+
+                    // Three levels of the label
+                    int[] labelExtendX = new int[3];
+
+                    int symbolSize = border.getSymbolSize();
+                    int labelHeight = fontMetrics.getHeight();
+                    int halfLabelHeight = labelHeight / 2;
+
                     IAxis xAxis = chart.getAxisSet().getXAxis(0);
                     IAxis yAxis = chart.getAxisSet().getYAxis(0);
 
-                    int yPosLabel = 0;
-                    int lastWriteLabelLevel1 = 0;
-                    int lastWriteLabelLevel2 = 0;
-                    int lastWriteLabelLevel3 = 0;
-
                     for (int index = 0; index < dates.length; index++)
                     {
-                        boolean freeSpaceForLabelLevel1 = true;
-                        boolean freeSpaceForLabelLevel2 = true;
-                        boolean freeSpaceForLabelLevel3 = true;
-
                         int x = xAxis.getPixelCoordinate(dates[index].getTime());
                         int y = yAxis.getPixelCoordinate(values[index]);
 
                         String label = getDividendLabel(dividends.get(index));
-                        Point textExtent = event.gc.textExtent(label);
 
-                        event.gc.setForeground(Colors.theme().defaultForeground());
+                        int labelWidth = event.gc.stringExtent(label).x;
+                        int halfLabelWidth = labelWidth / 2;
 
-                        if (((x - (textExtent.x / 2)) - lastWriteLabelLevel1) <= 0)
-                            freeSpaceForLabelLevel1 = false;
-
-                        if (((x - (textExtent.x / 2)) - lastWriteLabelLevel2) <= 0)
-                            freeSpaceForLabelLevel2 = false;
-
-                        if (((x - (textExtent.x / 2)) - lastWriteLabelLevel3) <= 0)
-                            freeSpaceForLabelLevel3 = false;
-
-                        if (freeSpaceForLabelLevel1 || freeSpaceForLabelLevel2 || freeSpaceForLabelLevel3)
+                        for (int level = 0; level < 3; level++)
                         {
-                            if (freeSpaceForLabelLevel1)
+                            // If the label has a free space and does not start
+                            // in the negative, we output it.
+                            if ((x - halfLabelWidth) - labelExtendX[level] > 0)
                             {
-                                yPosLabel = y - textExtent.y - border.getSymbolSize();
-                                lastWriteLabelLevel1 = (x + (textExtent.x / 2));
+                                event.gc.drawText(label, x - halfLabelWidth,
+                                                y - symbolSize - labelHeight * (level + 1) - halfLabelHeight, true);
+
+                                labelExtendX[level] = x + halfLabelWidth;
+                                break;
                             }
-                            if (freeSpaceForLabelLevel2 && !freeSpaceForLabelLevel1)
-                            {
-                                yPosLabel = yPosLabel - textExtent.y;
-                                lastWriteLabelLevel2 = (x + (textExtent.x / 2));
-                            }
-                            if (freeSpaceForLabelLevel3 && !freeSpaceForLabelLevel2 && !freeSpaceForLabelLevel1)
-                            {
-                                yPosLabel = yPosLabel - textExtent.y;
-                                lastWriteLabelLevel3 = (x + (textExtent.x / 2));
-                            }
-                            event.gc.drawText(label, x - (textExtent.x / 2), yPosLabel, true);
                         }
                     }
                 });
@@ -1310,10 +1493,10 @@ public class SecuritiesChart
                         .filter(p -> chartInterval.contains(p.getDate())) //
                         .min(Comparator.comparing(SecurityPrice::getValue));
 
-        max.ifPresent(high -> addExtremeMarker(high, PlotSymbolType.DIAMOND, // 
-                        Messages.LabelChartDetailMarkerHigh, colorHigh));
-        min.ifPresent(low -> addExtremeMarker(low, PlotSymbolType.DIAMOND, // 
-                        Messages.LabelChartDetailMarkerLow, colorLow));
+        max.ifPresent(high -> addExtremeMarker(high, PlotSymbolType.DIAMOND, //
+                        Messages.LabelChartDetailMarkerHigh, colorExtremeMarkerHigh));
+        min.ifPresent(low -> addExtremeMarker(low, PlotSymbolType.DIAMOND, //
+                        Messages.LabelChartDetailMarkerLow, colorExtremeMarkerLow));
     }
 
     private void addExtremeMarker(SecurityPrice price, PlotSymbolType plotSymbolType, String seriesLabel, Color color)
@@ -1350,12 +1533,15 @@ public class SecuritiesChart
 
                     event.gc.setForeground(Colors.theme().defaultForeground());
 
-                    if (inner.getSymbolColor() == colorHigh)
+                    if (inner.getSymbolColor() == colorExtremeMarkerHigh)
                         y = y - textExtent.y - inner.getSymbolSize();
                     else
                         y = y + inner.getSymbolSize();
 
-                    event.gc.drawText(valueFormat, x - (textExtent.x / 2), y, true);
+                    // If the label does not start in negative, then we print
+                    // it.
+                    if (x - (textExtent.x / 2) >= 0)
+                        event.gc.drawText(valueFormat, x - (textExtent.x / 2), y, true);
                 });
             }
         }
@@ -1410,6 +1596,54 @@ public class SecuritiesChart
         lineSeriesBollingerBandsUpperBand.setVisibleInLegend(false);
     }
 
+    private void addMacdMarkerLines(ChartInterval chartInterval, Color color)
+    {
+        MovingAverageConvergenceDivergence macd = new MovingAverageConvergenceDivergence(this.security, chartInterval);
+        ChartLineSeriesAxes macdLines = macd.getMacdLine();
+        ChartLineSeriesAxes signalLines = macd.getSignalLine();
+        if (macdLines == null || macdLines.getValues() == null || macdLines.getDates() == null
+                        || signalLines.getValues() == null || signalLines.getDates() == null)
+            return;
+
+        Supplier<IAxis> yAxisFactory = () -> {
+            int yAxisId = chart.getAxisSet().createYAxis();
+            IAxis yAxis = chart.getAxisSet().getYAxis(yAxisId);
+            yAxis.getTitle().setVisible(false);
+            yAxis.getTick().setVisible(false);
+            yAxis.getGrid().setStyle(LineStyle.NONE);
+            yAxis.setPosition(Position.Primary);
+            return yAxis;
+        };
+
+        int yAxisId = chart.getOrCreateAxis(ChartDetails.MACD, yAxisFactory).getId();
+
+        ILineSeries lineSeriesMacd = (ILineSeries) chart.getSeriesSet().createSeries(SeriesType.LINE,
+                        Messages.LabelChartDetailIndicatorMacd);
+        lineSeriesMacd.setXDateSeries(macdLines.getDates());
+        lineSeriesMacd.setLineStyle(LineStyle.SOLID);
+        lineSeriesMacd.setLineWidth(2);
+        lineSeriesMacd.enableArea(false);
+        lineSeriesMacd.setSymbolType(PlotSymbolType.NONE);
+        lineSeriesMacd.setYSeries(macdLines.getValues());
+        lineSeriesMacd.setAntialias(swtAntialias);
+        lineSeriesMacd.setLineColor(color);
+        lineSeriesMacd.setYAxisId(yAxisId);
+        lineSeriesMacd.setVisibleInLegend(true);
+
+        ILineSeries lineSeriesSignal = (ILineSeries) chart.getSeriesSet().createSeries(SeriesType.LINE,
+                        Messages.LabelChartDetailIndicatorMacdSignal);
+        lineSeriesSignal.setXDateSeries(signalLines.getDates());
+        lineSeriesSignal.setLineStyle(LineStyle.DOT);
+        lineSeriesSignal.setLineWidth(2);
+        lineSeriesSignal.enableArea(false);
+        lineSeriesSignal.setSymbolType(PlotSymbolType.NONE);
+        lineSeriesSignal.setYSeries(signalLines.getValues());
+        lineSeriesSignal.setAntialias(swtAntialias);
+        lineSeriesSignal.setLineColor(color);
+        lineSeriesSignal.setYAxisId(yAxisId);
+        lineSeriesSignal.setVisibleInLegend(false);
+    }
+
     private void addFIFOPurchasePrice(ChartInterval chartInterval)
     {
         // securities w/o currency (e.g. index) cannot be bought and hence have
@@ -1433,7 +1667,7 @@ public class SecuritiesChart
                                         : chartInterval.getStart())
                         .distinct() //
                         .sorted() //
-                        .collect(Collectors.toList());
+                        .toList();
 
         // calculate FIFO purchase price for each event - separate lineSeries
         // per holding period
@@ -1525,7 +1759,7 @@ public class SecuritiesChart
                                         : chartInterval.getStart())
                         .distinct() //
                         .sorted() //
-                        .collect(Collectors.toList());
+                        .toList();
 
         // calculate floating avg purchase price for each event - separate
         // lineSeries
@@ -1636,5 +1870,44 @@ public class SecuritiesChart
     private boolean shouldUseBaseCurrency()
     {
         return chartConfig.contains(ChartDetails.USE_BASE_CURRENCY);
+    }
+
+    private static class MessagePainter implements PaintListener, DisposeListener
+    {
+        private String message;
+        private Font font;
+
+        private void setMessage(String message)
+        {
+            this.message = message;
+        }
+
+        @Override
+        public void paintControl(PaintEvent e)
+        {
+            if (message == null)
+                return;
+
+            if (font == null)
+                font = FontDescriptor.createFrom(e.gc.getFont()).increaseHeight(5).createFont(e.display);
+
+            Font defaultFont = e.gc.getFont();
+            e.gc.setFont(font);
+
+            Point txtExtend = e.gc.textExtent(message);
+            int posX = (e.width - txtExtend.x) / 2;
+            int posY = (e.height - txtExtend.y) / 2;
+            e.gc.setForeground(Colors.DARK_GRAY);
+            e.gc.drawText(message, posX, posY);
+
+            e.gc.setFont(defaultFont);
+        }
+
+        @Override
+        public void widgetDisposed(DisposeEvent e)
+        {
+            if (font != null)
+                font.dispose();
+        }
     }
 }
