@@ -1,5 +1,7 @@
 package name.abuchen.portfolio.ui.views.dashboard;
 
+import static name.abuchen.portfolio.util.CollectorsUtil.toMutableList;
+
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -10,13 +12,11 @@ import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.LinkedBlockingQueue;
-import java.util.function.Consumer;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-import javax.inject.Inject;
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
+import jakarta.inject.Inject;
 
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.e4.ui.di.UISynchronize;
@@ -71,6 +71,7 @@ import name.abuchen.portfolio.ui.views.panes.SecurityEventsPane;
 import name.abuchen.portfolio.ui.views.panes.SecurityPriceChartPane;
 import name.abuchen.portfolio.ui.views.panes.TradesPane;
 import name.abuchen.portfolio.ui.views.panes.TransactionsPane;
+import name.abuchen.portfolio.util.Pair;
 
 public class DashboardView extends AbstractHistoricView
 {
@@ -117,15 +118,13 @@ public class DashboardView extends AbstractHistoricView
         private final DashboardView dashboardView;
         private final LocalSelectionTransfer transfer;
         private final Composite dropTarget;
-        private final Consumer<Dashboard.Widget> listener;
 
         private WidgetDropTargetAdapter(DashboardView dashboardView, LocalSelectionTransfer transfer,
-                        Composite dropTarget, Consumer<Dashboard.Widget> listener)
+                        Composite dropTarget)
         {
             this.dashboardView = dashboardView;
             this.transfer = transfer;
             this.dropTarget = dropTarget;
-            this.listener = listener;
         }
 
         @Override
@@ -133,11 +132,10 @@ public class DashboardView extends AbstractHistoricView
         {
             Object droppedElement = ((StructuredSelection) transfer.getSelection()).getFirstElement();
 
-            if (!(droppedElement instanceof Composite))
+            if (!(droppedElement instanceof Composite droppedComposite))
                 return;
 
             // check if dropped upon itself
-            Composite droppedComposite = (Composite) droppedElement;
             if (droppedComposite.equals(dropTarget))
                 return;
 
@@ -155,14 +153,59 @@ public class DashboardView extends AbstractHistoricView
                 newParent = newParent.getParent();
             Dashboard.Column newColumn = (Dashboard.Column) newParent.getData();
 
+            if ((event.detail & DND.DROP_MOVE) != 0)
+                doDropMove(droppedComposite, droppedWidget, oldColumn, newColumn, newParent);
+
+            if ((event.detail & DND.DROP_COPY) != 0)
+                doDropCopy(droppedWidget.copy(), newColumn, newParent);
+
+            dashboardView.markDirty();
+
+            oldParent.layout();
+            newParent.layout();
+        }
+
+        private void doDropCopy(Dashboard.Widget copiedWidget, Dashboard.Column newColumn, Composite newParent)
+        {
+            Composite elementToMoveAbove = null;
+            if (dropTarget.getData() instanceof Dashboard.Widget dropTargetWidget)
+            {
+                // dropped on another widget, place above drop target
+                elementToMoveAbove = dropTarget;
+                newColumn.getWidgets().add(newColumn.getWidgets().indexOf(dropTargetWidget), copiedWidget);
+            }
+            else if (dropTarget.getData() instanceof Dashboard.Column)
+            {
+                // dropped on another column, place above filler
+                elementToMoveAbove = (Composite) newParent.getData(FILLER_KEY);
+                newColumn.getWidgets().add(copiedWidget);
+            }
+            else
+            {
+                throw new IllegalArgumentException();
+            }
+
+            WidgetFactory factory = WidgetFactory.valueOf(copiedWidget.getType());
+            if (factory == null)
+                throw new IllegalArgumentException();
+
+            Pair<WidgetDelegate<?>, Composite> newDelegateWithComposite = dashboardView
+                            .buildDelegateAndMoveAboveElement(newParent, factory, copiedWidget, elementToMoveAbove);
+
+            newDelegateWithComposite.getLeft().update();
+            newDelegateWithComposite.getRight().setParent(newParent);
+        }
+
+        private void doDropMove(Composite droppedComposite, Dashboard.Widget droppedWidget, Dashboard.Column oldColumn,
+                        Dashboard.Column newColumn, Composite newParent)
+        {
             droppedComposite.setParent(newParent);
 
-            if (dropTarget.getData() instanceof Dashboard.Widget)
+            if (dropTarget.getData() instanceof Dashboard.Widget dropTargetWidget)
             {
                 // dropped on another widget
                 droppedComposite.moveAbove(dropTarget);
 
-                Dashboard.Widget dropTargetWidget = (Dashboard.Widget) dropTarget.getData();
                 oldColumn.getWidgets().remove(droppedWidget);
                 newColumn.getWidgets().add(newColumn.getWidgets().indexOf(dropTargetWidget), droppedWidget);
             }
@@ -179,11 +222,6 @@ public class DashboardView extends AbstractHistoricView
             {
                 throw new IllegalArgumentException();
             }
-
-            listener.accept(droppedWidget);
-
-            oldParent.layout();
-            newParent.layout();
         }
 
         @Override
@@ -343,7 +381,7 @@ public class DashboardView extends AbstractHistoricView
         int[] index = { 0 };
         getClient().getDashboards().forEach(board -> toolBar.add(createToolItem(index[0]++, board)));
 
-        Action newAction = new SimpleAction(Messages.MenuNewDashboard, a -> createNewDashboard(null));
+        Action newAction = new SimpleAction(Messages.MenuNewDashboard, a -> createNewDashboard());
         newAction.setImageDescriptor(Images.VIEW_PLUS.descriptor());
         toolBar.add(newAction);
     }
@@ -360,7 +398,7 @@ public class DashboardView extends AbstractHistoricView
                 manager.add(new Separator());
             }
 
-            manager.add(new SimpleAction(Messages.ConfigurationDuplicate, a -> createNewDashboard(board)));
+            manager.add(new SimpleAction(Messages.ConfigurationDuplicate, a -> duplicateDashboard(board)));
             manager.add(new SimpleAction(Messages.ConfigurationRename, a -> renameDashboard(board)));
             manager.add(new ConfirmAction(Messages.ConfigurationDelete,
                             MessageFormat.format(Messages.ConfigurationDeleteConfirm, board.getName()),
@@ -430,12 +468,12 @@ public class DashboardView extends AbstractHistoricView
         scrolledComposite.addDisposeListener(e -> parent.getParent().removeControlListener(listener));
 
         container.addDisposeListener(e -> persistedState.setValue(SELECTED_DASHBOARD_KEY,
-                        getClient().getDashboards().collect(Collectors.toList()).indexOf(dashboard)));
+                        getClient().getDashboards().toList().indexOf(dashboard)));
 
         return scrolledComposite;
     }
 
-    private void updateScrolledCompositeMinSize()
+    public void updateScrolledCompositeMinSize()
     {
         // because this method can be called *after* calculating data in the
         // background, all widgets can already be disposed
@@ -499,7 +537,7 @@ public class DashboardView extends AbstractHistoricView
                 if (factory == null)
                     continue;
 
-                buildDelegate(columnControl, factory, widget);
+                buildDelegateAndMoveAboveFiller(columnControl, factory, widget);
             }
             catch (IllegalArgumentException e)
             {
@@ -555,7 +593,15 @@ public class DashboardView extends AbstractHistoricView
         manager.add(new SimpleAction(Messages.MenuDeleteDashboardColumn, a -> deleteColumn(columnControl)));
     }
 
-    private WidgetDelegate<?> buildDelegate(Composite columnControl, WidgetFactory widgetType, Dashboard.Widget widget)
+    private Pair<WidgetDelegate<?>, Composite> buildDelegateAndMoveAboveFiller(Composite columnControl,
+                    WidgetFactory widgetType, Dashboard.Widget widget)
+    {
+        Composite filler = (Composite) columnControl.getData(FILLER_KEY);
+        return buildDelegateAndMoveAboveElement(columnControl, widgetType, widget, filler);
+    }
+
+    private Pair<WidgetDelegate<?>, Composite> buildDelegateAndMoveAboveElement(Composite columnControl,
+                    WidgetFactory widgetType, Dashboard.Widget widget, Composite elementToMoveAbove)
     {
         WidgetDelegate<?> delegate = widgetType.create(widget, dashboardData);
         inject(delegate);
@@ -564,8 +610,8 @@ public class DashboardView extends AbstractHistoricView
         element.setData(widget);
         element.setData(DELEGATE_KEY, delegate);
 
-        Composite filler = (Composite) columnControl.getData(FILLER_KEY);
-        element.moveAbove(filler);
+        if (elementToMoveAbove != null)
+            element.moveAbove(elementToMoveAbove);
 
         new ContextMenu(delegate.getTitleControl(), manager -> widgetMenuAboutToShow(manager, delegate)).hook();
         InfoToolTip.attach(delegate.getTitleControl(), () -> buildToolTip(delegate));
@@ -577,7 +623,7 @@ public class DashboardView extends AbstractHistoricView
             addDragListener(child);
 
         GridDataFactory.fillDefaults().grab(true, false).applyTo(element);
-        return delegate;
+        return new Pair<>(delegate, element);
     }
 
     private String buildToolTip(WidgetDelegate<?> delegate)
@@ -648,7 +694,7 @@ public class DashboardView extends AbstractHistoricView
     {
         LocalSelectionTransfer transfer = LocalSelectionTransfer.getTransfer();
 
-        DropTargetAdapter dragAdapter = new WidgetDropTargetAdapter(this, transfer, parent, w -> markDirty());
+        DropTargetAdapter dragAdapter = new WidgetDropTargetAdapter(this, transfer, parent);
 
         DropTarget dropTarget = new DropTarget(parent, DND.DROP_MOVE | DND.DROP_COPY);
         dropTarget.setTransfer(transfer);
@@ -719,9 +765,23 @@ public class DashboardView extends AbstractHistoricView
         updateWidgets();
     }
 
-    private void createNewDashboard(Dashboard template)
+    private void createNewDashboard()
     {
-        Dashboard newDashboard = template != null ? template.copy() : createDefaultDashboard();
+        NewDashboardDialog dialog = new NewDashboardDialog(Display.getCurrent().getActiveShell());
+        if (dialog.open() != Window.OK)
+            return;
+
+        Dashboard newDashboard = dialog.createDashboard();
+
+        getClient().addDashboard(newDashboard);
+        getClient().touch();
+
+        selectDashboard(newDashboard);
+    }
+
+    private void duplicateDashboard(Dashboard template)
+    {
+        Dashboard newDashboard = template.copy();
 
         InputDialog dialog = new InputDialog(Display.getCurrent().getActiveShell(), Messages.ConfigurationNew,
                         Messages.ColumnName, newDashboard.getName(), null);
@@ -785,7 +845,7 @@ public class DashboardView extends AbstractHistoricView
         widget.setType(widgetType.name());
         column.getWidgets().add(widget);
 
-        WidgetDelegate<?> delegate = buildDelegate(columnControl, widgetType, widget);
+        WidgetDelegate<?> delegate = buildDelegateAndMoveAboveFiller(columnControl, widgetType, widget).getLeft();
 
         getClient().touch();
         delegate.update();
@@ -833,13 +893,7 @@ public class DashboardView extends AbstractHistoricView
         Dashboard.Column newColumn = new Dashboard.Column();
         dashboard.getColumns().add(index, newColumn);
 
-        newColumn.setWidgets(column.getWidgets().stream().map(widget -> {
-            Widget copy = new Widget();
-            copy.setLabel(widget.getLabel());
-            copy.setType(widget.getType());
-            copy.getConfiguration().putAll(widget.getConfiguration());
-            return copy;
-        }).collect(Collectors.toList()));
+        newColumn.setWidgets(column.getWidgets().stream().map(Widget::copy).collect(toMutableList()));
 
         getClient().touch();
 
@@ -869,93 +923,7 @@ public class DashboardView extends AbstractHistoricView
         Dashboard newDashboard = new Dashboard();
         newDashboard.setName(Messages.LabelDashboard);
 
-        newDashboard.getConfiguration().put(Dashboard.Config.REPORTING_PERIOD.name(), "L1Y0"); //$NON-NLS-1$
-
-        Dashboard.Column column = new Dashboard.Column();
-        newDashboard.getColumns().add(column);
-
-        Dashboard.Widget widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.HEADING.name());
-        widget.setLabel(Messages.LabelKeyIndicators);
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.TTWROR.name());
-        widget.setLabel(WidgetFactory.TTWROR.getLabel());
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.IRR.name());
-        widget.setLabel(WidgetFactory.IRR.getLabel());
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.ABSOLUTE_CHANGE.name());
-        widget.setLabel(WidgetFactory.ABSOLUTE_CHANGE.getLabel());
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.DELTA.name());
-        widget.setLabel(WidgetFactory.DELTA.getLabel());
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.HEADING.name());
-        widget.setLabel(Messages.LabelTTWROROneDay);
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.TTWROR.name());
-        widget.setLabel(WidgetFactory.TTWROR.getLabel());
-        widget.getConfiguration().put(Dashboard.Config.REPORTING_PERIOD.name(), "T1"); //$NON-NLS-1$
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.ABSOLUTE_CHANGE.name());
-        widget.setLabel(WidgetFactory.ABSOLUTE_CHANGE.getLabel());
-        widget.getConfiguration().put(Dashboard.Config.REPORTING_PERIOD.name(), "T1"); //$NON-NLS-1$
-        column.getWidgets().add(widget);
-
-        column = new Dashboard.Column();
-        newDashboard.getColumns().add(column);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.HEADING.name());
-        widget.setLabel(Messages.LabelRiskIndicators);
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.MAXDRAWDOWN.name());
-        widget.setLabel(WidgetFactory.MAXDRAWDOWN.getLabel());
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.MAXDRAWDOWNDURATION.name());
-        widget.setLabel(WidgetFactory.MAXDRAWDOWNDURATION.getLabel());
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.VOLATILITY.name());
-        widget.setLabel(WidgetFactory.VOLATILITY.getLabel());
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.SEMIVOLATILITY.name());
-        widget.setLabel(WidgetFactory.SEMIVOLATILITY.getLabel());
-        column.getWidgets().add(widget);
-
-        column = new Dashboard.Column();
-        newDashboard.getColumns().add(column);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.HEADING.name());
-        widget.setLabel(Messages.PerformanceTabCalculation);
-        column.getWidgets().add(widget);
-
-        widget = new Dashboard.Widget();
-        widget.setType(WidgetFactory.CALCULATION.name());
-        widget.setLabel(WidgetFactory.CALCULATION.getLabel());
-        column.getWidgets().add(widget);
+        NewDashboardDialog.buildIndicatorDashboard(newDashboard);
 
         return newDashboard;
     }
